--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Project Get Out.sln",
+    "dotnet.defaultSolution": "Project_GetOut.sln",
     "dotnet.preferCSharpExtension": true
 }
